--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,17 @@ th, td{
   font-size: 13px !important;
 }
 
+.label{
+  font-size: 12px !important;
+  color: #7c7b7b
+}
+
+.hidescrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hidescrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
